Fix wrapping types in custom field view
[ci skip]

--- a/app/assets/stylesheets/content/_forms.sass
+++ b/app/assets/stylesheets/content/_forms.sass
@@ -383,6 +383,10 @@ fieldset.form--fieldset
   display: flex
   align-items: stretch
 
+  &.-wrap-around
+    display: flex
+    flex-wrap: wrap
+
   &.-vertical
     display: block
 
